--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "pinia": "^2.1.6",
+    "sass": "^1.66.1",
     "vue": "^3.3.4",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.2.4"
